force-app/main/default/objects/Behavioral_Flag__c/Behavioral_Flag__c.object-meta.xml
<CustomObject>
    <description>Behavioral flag detected by the analytics engine for rep forecasting patterns.</description>
    <label>Behavioral Flag</label>
    <nameField><label>Behavioral Flag Name</label><type>AutoNumber</type><displayFormat>BF-{000000}</displayFormat></nameField>
    <pluralLabel>Behavioral Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>