force-app/main/default/objects/Behavioral_Flag__c/fields/AI_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Version__c</fullName>
    <label>AI Model Version</label>
    <description>AI Model Version</description>
    <type>Text</type>
    <length>20</length>
</CustomField>