force-app/main/default/objects/Behavioral_Flag__c/fields/AI_Narrative__c.field-meta.xml
<CustomField>
    <fullName>AI_Narrative__c</fullName>
    <label>AI Narrative</label>
    <description>AI Narrative</description>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>