force-app/main/default/objects/Behavioral_Flag__c/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <label>Created On</label>
    <description>Created On</description>
    <type>DateTime</type>
</CustomField>