force-app/main/default/objects/Behavioral_Flag__c/fields/Detection_Rule__c.field-meta.xml
<CustomField>
    <fullName>Detection_Rule__c</fullName>
    <label>Detection Rule</label>
    <description>Detection Rule</description>
    <type>Lookup</type>
    <referenceTo>Detection_Rule__c</referenceTo>
    <relationshipLabel>Behavioral Flags</relationshipLabel>
    <relationshipName>Behavioral_Flags_Rule</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>