force-app/main/default/objects/Behavioral_Flag__c/fields/Dismissal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Reason__c</fullName>
    <label>Dismissal Reason</label>
    <description>Dismissal Reason</description>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>