force-app/main/default/objects/Behavioral_Flag__c/fields/Dismissed_By__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_By__c</fullName>
    <label>Dismissed By</label>
    <description>Dismissed By</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Dismissed Flags</relationshipLabel>
    <relationshipName>Dismissed_Flags</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>