force-app/main/default/objects/Behavioral_Flag__c/fields/Dismissed_On__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_On__c</fullName>
    <label>Dismissed On</label>
    <description>Dismissed On</description>
    <type>DateTime</type>
</CustomField>