force-app/main/default/objects/Behavioral_Flag__c/fields/Evidence_JSON__c.field-meta.xml
<CustomField>
    <fullName>Evidence_JSON__c</fullName>
    <label>Evidence JSON</label>
    <description>Evidence JSON</description>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>