force-app/main/default/objects/Behavioral_Flag__c/fields/Evidence_Summary__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Summary__c</fullName>
    <label>Evidence Summary</label>
    <description>Evidence Summary</description>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>