force-app/main/default/objects/Behavioral_Flag__c/fields/Explanation_Action__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Action__c</fullName>
    <label>1. Observed Action</label>
    <description>1. Observed Action</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>