force-app/main/default/objects/Behavioral_Flag__c/fields/Explanation_Comp_Context__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Comp_Context__c</fullName>
    <label>2. Compensation Context</label>
    <description>2. Compensation Context</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>