force-app/main/default/objects/Behavioral_Flag__c/fields/Explanation_History__c.field-meta.xml
<CustomField>
    <fullName>Explanation_History__c</fullName>
    <label>4. Historical Pattern</label>
    <description>4. Historical Pattern</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>