force-app/main/default/objects/Behavioral_Flag__c/fields/Explanation_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Recommendation__c</fullName>
    <label>5. Recommended Action</label>
    <description>5. Recommended Action</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>