force-app/main/default/objects/Behavioral_Flag__c/fields/Explanation_Signals__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Signals__c</fullName>
    <label>3. Deal Health Signals</label>
    <description>3. Deal Health Signals</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>