force-app/main/default/objects/Behavioral_Flag__c/fields/Headline__c.field-meta.xml
<CustomField>
    <fullName>Headline__c</fullName>
    <label>Headline</label>
    <description>Observable-language summary. Never accusatory.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>