force-app/main/default/objects/Behavioral_Flag__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <description>Opportunity</description>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Behavioral Flags</relationshipLabel>
    <relationshipName>Behavioral_Flags_Opp</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>