force-app/main/default/objects/Behavioral_Flag__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <description>Participant</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Behavioral Flags</relationshipLabel>
    <relationshipName>Behavioral_Flags_User</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>