force-app/main/default/objects/Behavioral_Flag__c/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <description>Resolution Type</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Dismissed_Valid_Reason</fullName><default>false</default><label>Dismissed_Valid_Reason</label></value>
            <value><fullName>Dismissed_False_Positive</fullName><default>false</default><label>Dismissed_False_Positive</label></value>
            <value><fullName>Resolved_Action_Taken</fullName><default>false</default><label>Resolved_Action_Taken</label></value>
            <value><fullName>Superseded_By_New_Data</fullName><default>false</default><label>Superseded_By_New_Data</label></value>
            <value><fullName>Expired_Period_Closed</fullName><default>false</default><label>Expired_Period_Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>