force-app/main/default/objects/Behavioral_Flag__c/fields/Signal_Count__c.field-meta.xml
<CustomField>
    <fullName>Signal_Count__c</fullName>
    <label>Signal Count</label>
    <description>Signal Count</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>