force-app/main/default/objects/Behavioral_Flag__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Status</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
            <value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value>
            <value><fullName>Superseded</fullName><default>false</default><label>Superseded</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>